2007-06-11  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Samuel Cormier-Iijima <sciyoshi@gmail.com>

	* examples/xmlrpc/xmlrpc-server.c:
	(create_response_string):
	  Printf format fix for 64-bit systems.

2007-04-30  Tim-Philipp Müller  <tim at centricular dot net>

	* TODO:
	  Minor update.

	* src/server.h:
	  Document where to find details of the connecting client in the
	  GServer callback.

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

        * doc/gnet-docs.sgml:
	  The pkg-config module name is gnet-2.0, not gnet. Fix docs.

2007-02-23  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* examples/xmlrpc: Added option to split the call and the reply for xmlrpc
	commands through the addition of command gnet_xmlrpc_server_register_async_command(),
	which passes the connection variable but does not return a reply. This is useful
	when the reply may not be given immediately (in terms of mainloop interaction).

2007-02-14  Tim-Philipp Müller  <tim at centricular dot net>

        * src/conn-http.c: (gnet_conn_http_reset),
	(gnet_conn_http_free_event):
	  Fix two small memory leaks.

2007-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	* src/unix.c: (gnet_unix_socket_unlink):
	  Make this function static, it's an internal utility function.
	  Also shuffle a few macros around.

2007-02-07  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Zeeshan Ali <zeenix gmail com>

	* AUTHORS:
	* NEWS:
	* configure.ac:
	* doc/gnet-sections.txt:
	* doc/tmpl/unix.sgml:
	* examples/echoclient-unix.c:
	* examples/echoserver-unix.c:
	* src/unix.c: (gnet_sun_len), (gnet_unix_socket_new_internal),
	(gnet_unix_socket_new),	(gnet_unix_socket_new_abstract),
	(gnet_unix_socket_unref), (gnet_unix_socket_server_new_internal),
	(gnet_unix_socket_server_new), (gnet_unix_socket_server_new_abstract):
	* src/unix.h:
	* tests/client_server_test.pl:
	  API: gnet_unix_socket_new_abstract()
	  API: gnet_unix_socket_server_new_abstract()